# berlin-bicycle-thefts

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
bicycle_theft/: api.py  config.py  dataset.py  features.py  models.py  predict.py  predictor.py  train.py
data/raw/: population.csv
notebooks/: 01_etl.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  03_split_data.ipynb  04_split_data.ipynb  04_train_model.ipynb
