[project]
name = "berlin-bicycle-theft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "branca>=0.8.2",
    "geopandas>=1.1.1",
    "holidays>=0.84",
    "ipykernel>=7.1.0",
    "ipyleaflet>=0.20.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "libpysal>=4.13.0",
    "lightgbm>=4.6.0",
    "matplot>=0.1.9",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "optuna[visualization]>=4.5.0",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "snap>=0.5",
    "statsmodels>=0.14.5",
]
