[project]
name = "berlin-bicycle-theft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "branca>=0.8.2",
    "click>=8.3.0",
    "geopandas>=1.1.1",
    "holidays>=0.84",
    "ipykernel>=7.1.0",
    "ipyleaflet>=0.20.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "libpysal>=4.13.0",
    "lightgbm>=4.6.0",
    "matplot>=0.1.9",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "optuna[visualization]>=4.5.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "plotly>=6.4.0",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "snap>=0.5",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "ruff>=0.14.4",
    "types-python-dateutil>=2.9.0.20251108",
    "types-pytz>=2025.2.0.20251108",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
